// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Artifact ConnectorRefSteps tests last step data without initial values 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepository
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          3
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          Artifact Location
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          first step
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card artifactIcon Card--selected"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-dockerhub"
                  style="height: 26px;"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 10"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
                    />
                    <path
                      d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
                    />
                    <path
                      d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                dockerRegistry
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card artifactIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-gcp"
                  style="height: 26px;"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 12"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      height="8.5"
                      id="service-gcp_svg__a"
                      maskUnits="userSpaceOnUse"
                      width="9.1"
                      x="0"
                      y="0"
                    >
                      <path
                        d="M0 0h9.1v8.5H0z"
                        fill="#fff"
                      />
                    </mask>
                    <path
                      d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                      fill="#cac9c2"
                    />
                    <path
                      d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                      fill="#fff"
                    />
                    <path
                      d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                      fill="#5072aa"
                    />
                    <path
                      d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                      fill="#4d6796"
                    />
                    <path
                      d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                      fill="#fff"
                    />
                    <path
                      d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                      fill="#cc4232"
                    />
                    <path
                      d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                      fill="#b23f33"
                    />
                    <path
                      d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                      fill="#fff"
                    />
                    <path
                      d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                      fill="#ecb02a"
                      mask="url(#service-gcp_svg__a)"
                      transform="translate(0 3.421)"
                    />
                    <path
                      d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                      fill="#c79732"
                    />
                    <g
                      fill="#fff"
                    >
                      <path
                        d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                connectors.GCR.name
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card artifactIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="ecr-step"
                  style="height: 26px;"
                >
                  <svg
                    fill="#fff"
                    fill-rule="evenodd"
                    height="26"
                    stroke="#000"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    viewBox="0 0 85 85"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <style>
                      .ecr-step_svg__B{stroke:none}.ecr-step_svg__C{fill:#f58536}
                    </style>
                    <use
                      x="2.5"
                      xlink:href="#ecr-step_svg__A"
                      y="2.5"
                    />
                    <symbol
                      id="ecr-step_svg__A"
                      overflow="visible"
                    >
                      <g
                        class="ecr-step_svg__B"
                        fill="#9d5025"
                      >
                        <path
                          d="M0 41.579C0 20.293 17.84 3.157 40 3.157s40 17.136 40 38.422S62.16 80 40 80 0 62.864 0 41.579z"
                        />
                        <path
                          d="M0 38.422h80v3.157H0z"
                        />
                      </g>
                      <path
                        class="ecr-step_svg__B ecr-step_svg__C"
                        d="M0 38.422C0 17.136 17.84 0 40 0s40 17.136 40 38.422-17.84 38.422-40 38.422S0 59.707 0 38.422z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M42.589 34.255h-5.166L34.65 11.364h10.713l-2.774 22.891z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M63.135 51.111l2.064-1.641-7.48-10.732-16.379-5.492L40 41.932l14.762 1.326 8.373 7.853zm-46.27 0l-2.051-1.641 7.466-10.732 16.379-5.492L40 41.932l-14.762 1.326-8.373 7.853zm15.708-39.747c0-3.952 3.312-7.134 7.427-7.134s7.427 3.182 7.427 7.134-3.312 7.134-7.427 7.134-7.427-3.182-7.427-7.134z"
                      />
                      <path
                        class="ecr-step_svg__B ecr-step_svg__C"
                        d="M40 19.129c-4.465 0-8.084-3.477-8.084-7.765S35.535 3.599 40 3.599s8.084 3.476 8.084 7.765c-.007 4.286-3.622 7.758-8.084 7.765zm0-14.268c3.739 0 6.77 2.911 6.77 6.503s-3.031 6.502-6.77 6.502-6.77-2.911-6.77-6.502S36.261 4.862 40 4.862h0zm-2.432 6.503c0-1.294 1.085-2.336 2.432-2.336s2.432 1.042 2.432 2.336S41.347 13.7 40 13.7s-2.432-1.042-2.432-2.336z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M34.65 37.5c0-2.847 2.386-5.139 5.35-5.139s5.35 2.292 5.35 5.139-2.386 5.139-5.35 5.139-5.35-2.292-5.35-5.139z"
                      />
                      <path
                        class="ecr-step_svg__B ecr-step_svg__C"
                        d="M40 43.27c-3.312-.007-5.994-2.588-5.994-5.77s2.682-5.763 5.994-5.77 6.006 2.563 6.02 5.745c.004 1.536-.629 3.01-1.759 4.097S41.599 43.27 40 43.27zm0-10.29c2.592-.007 4.699 2.005 4.706 4.495s-2.088 4.513-4.679 4.52-4.699-2.005-4.706-4.495 2.088-4.513 4.679-4.52zm-1.643 4.52c0-.874.733-1.578 1.643-1.578s1.643.704 1.643 1.578-.733 1.578-1.643 1.578-1.643-.704-1.643-1.578z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M22.741 49.344H57.26v18.321H22.741z"
                      />
                      <g
                        fill="#fbbf93"
                      >
                        <use
                          class="ecr-step_svg__B"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="4.732"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="9.477"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="14.21"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="18.942"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="23.687"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="28.419"
                          xlink:href="#ecr-step_svg__C"
                        />
                      </g>
                    </symbol>
                    <defs>
                      <path
                        d="M24.476 50.821h2.629v15.366h-2.629z"
                        id="ecr-step_svg__C"
                      />
                    </defs>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                connectors.ECR.name
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Artifact ConnectorRefSteps tests new connector view works correctly 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--completedStep"
      >
        <span
          class="StepWizard--completedIcon"
        >
          <span
            class="bp3-icon bp3-icon-small-tick StyledProps--main StyledProps--color StyledProps--color-grey200"
            icon="small-tick"
          >
            <svg
              data-icon="small-tick"
              height="20"
              viewBox="0 0 20 20"
              width="20"
            >
              <desc>
                small-tick
              </desc>
              <path
                d="M15 5c-.28 0-.53.11-.71.29L8 11.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l7-7A1.003 1.003 0 0015 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepository
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="Layout--vertical Layout--layout-spacing-xxlarge StyledProps--main firstep"
      >
        <div
          class="heading"
        >
          second step
        </div>
        <div
          class="OverlaySpinner--overlaySpinner"
        >
          <form>
            <div
              class="connectorForm"
            >
              <div
                class="connectorContainer"
              >
                <div>
                  <div
                    class="StyledProps--font StyledProps--main"
                    style="margin-bottom: 5px;"
                  >
                    <p
                      class="StyledProps--font StyledProps--main"
                      style="margin-bottom: 8px;"
                    >
                      Docker Registry connector
                    </p>
                  </div>
                  <div
                    class="bp3-form-group"
                    style="margin-bottom: 0px;"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="Layout--horizontal StyledProps--main MultiTypeInput--main"
                        style="width: 410px;"
                      >
                        <button
                          class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow"
                          data-testid="cr-field-connectorId"
                          style="width: 382px;"
                          type="button"
                        >
                          <span
                            class="bp3-button-text"
                          >
                            <span
                              class="placeholder"
                            >
                              select Docker Registry connector
                            </span>
                          </span>
                          <span
                            class="bp3-icon bp3-icon-caret-down StyledProps--main"
                            icon="caret-down"
                          >
                            <svg
                              data-icon="caret-down"
                              height="16"
                              viewBox="0 0 16 16"
                              width="16"
                            >
                              <desc>
                                caret-down
                              </desc>
                              <path
                                d="M12 6.5c0-.28-.22-.5-.5-.5h-7a.495.495 0 00-.37.83l3.5 4c.09.1.22.17.37.17s.28-.07.37-.17l3.5-4c.08-.09.13-.2.13-.33z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                        </button>
                        <span
                          class="bp3-popover-wrapper MultiTypeInput--wrapper"
                        >
                          <span
                            class="bp3-popover-target"
                          >
                            <button
                              class="MultiTypeInput--btn MultiTypeInput--FIXED"
                            >
                              <span
                                class="bp3-icon StyledProps--main"
                                data-icon="fixed-input"
                              >
                                <svg
                                  height="12"
                                  viewBox="0 0 9 9"
                                  width="12"
                                  xmlns="http://www.w3.org/2000/svg"
                                >
                                  <path
                                    d="M5.61 7.55c.62-.7.3-1.42.18-2.35a.32.32 0 01.1-.29l1.43-1.42a.76.76 0 01.28-.15c.39-.1 1 0 1.28-.29a.34.34 0 000-.51L6.46.12a.33.33 0 00-.52 0c-.28.29-.2.9-.28 1.3a.53.53 0 01-.13.23L4.09 3.12a.29.29 0 01-.28.09c-.89-.11-1.6-.49-2.27.11-.29.26-.29.43 0 .7l1.31 1.34.15.16-.15.15-2.7 2.69a.36.36 0 000 .54.36.36 0 00.54-.05l2.63-2.68.17-.17.17.16c.45.46.9.91 1.36 1.36.21.21.42.22.59.03z"
                                    fill="currentColor"
                                  />
                                </svg>
                              </span>
                            </button>
                          </span>
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main addNewArtifact StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                  id="new-artifact-connector"
                  type="button"
                >
                  <span
                    class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
                    icon="plus"
                  >
                    <svg
                      data-icon="plus"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <desc>
                        plus
                      </desc>
                      <path
                        d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="bp3-button-text"
                  >
                    newLabel Docker Registry connector
                  </span>
                </button>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-xxlarge StyledProps--main"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-icon bp3-icon-chevron-left StyledProps--main StyledProps--padding-right-xsmall"
                  icon="chevron-left"
                >
                  <svg
                    data-icon="chevron-left"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-left
                    </desc>
                    <path
                      d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="bp3-button-text"
                >
                  back
                </span>
              </button>
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  continue
                </span>
                <span
                  class="bp3-icon bp3-icon-chevron-right StyledProps--main"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      chevron-right
                    </desc>
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Artifact ConnectorRefSteps tests renders correctly with connector Data 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepository
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          first step
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Artifact ConnectorRefSteps tests renders correctly with differnet artifact types 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              connectors.GCR.name
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepository
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          first step
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          >
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card artifactIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-dockerhub"
                  style="height: 26px;"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 10"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M5.8 3.3h1.3v1.3H5.8zM7.2 3.3h1.3v1.3H7.2zM4.3 3.3h1.3v1.3H4.3zM2.9 3.3h1.3v1.3H2.9zM1.4 3.3h1.3v1.3H1.4zM5.8 1.9h1.3v1.3H5.8zM5.8.4h1.3v1.3H5.8zM4.3 1.9h1.3v1.3H4.3zM2.9 1.9h1.3v1.3H2.9z"
                    />
                    <path
                      d="M.8 7.7c-.1-.2-.2-.3-.3-.4l-.1-.2c0-.1-.1-.2-.1-.4v-.2C.1 6.1 0 5.7 0 5.2v-.4h9.5c.7 0 1.4-.2 1.7-.5-.2-.2-.4-.6-.4-1 0-.5.1-1 .3-1.3l.1-.1.1.1c.3.2.9.8.9 1.6.3-.1.5-.1.8-.1.4 0 .7.1.9.2h.1v.1c-.3.6-1 .9-1.8.9h-.3c-1.2 3-3.7 4.6-7.3 4.6-.6 0-1.2-.1-1.8-.3-.7-.2-1.3-.6-1.8-1.1zm4.4 1.4c-.9-.4-1.3-.9-1.6-1.5-.4.1-.7.1-1.2.2H1.2C2 8.6 3 9.1 4.8 9.1zm-1-2.4c-.2 0-.3.2-.3.3 0 .2.2.3.3.3.2 0 .3-.2.3-.3s-.1-.3-.3-.3z"
                    />
                    <path
                      d="M4.2 6.8s.1 0 0 0c.1 0 .1.1 0 0 .1.2.1.2.2.2 0 0 .1 0 .1-.1V7c0 .1-.1.3-.3.3S4 7.2 4 7c0-.1.1-.2.2-.2"
                    />
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                dockerRegistry
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card artifactIcon Card--selected"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="service-gcp"
                  style="height: 26px;"
                >
                  <svg
                    height="26"
                    viewBox="0 0 14 12"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <mask
                      height="8.5"
                      id="service-gcp_svg__a"
                      maskUnits="userSpaceOnUse"
                      width="9.1"
                      x="0"
                      y="0"
                    >
                      <path
                        d="M0 0h9.1v8.5H0z"
                        fill="#fff"
                      />
                    </mask>
                    <path
                      d="M4.5 11L2 6.5 4.5 2h5L12 6.5 9.5 11z"
                      fill="#cac9c2"
                    />
                    <path
                      d="M7 7.8C5.9 7.8 5.1 7 5.1 6S5.9 4.1 7 4.1c1 0 1.9.9 1.9 1.9S8 7.8 7 7.8"
                      fill="#fff"
                    />
                    <path
                      d="M10.8.5c-.1-.3-.5-.5-.8-.5H4c-.3 0-.7.2-.9.5L1.4 3.4c0 .2 0 .4.1.5l1.2 2 2.1-3.6h6.8c.2 0 .3.1.5.2z"
                      fill="#5072aa"
                    />
                    <path
                      d="M1.4 3.3v.1c0 .2 0 .4.1.5l1.2 2 .6-1.1z"
                      fill="#4d6796"
                    />
                    <path
                      d="M4.1 1.5c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4M10.2 1.2c0 .2-.2.3-.3.3s-.4-.1-.4-.3.2-.3.3-.3.4.1.4.3"
                      fill="#fff"
                    />
                    <path
                      d="M13.9 5.5l-1.8-3c-.2-.1-.3-.2-.5-.2H9.1L11.2 6l-3.3 5.7-.3.3H10c.3 0 .7-.2.8-.5l3-5c.2-.3.2-.7.1-1"
                      fill="#cc4232"
                    />
                    <path
                      d="M12.2 2.7l-.1-.1c-.2-.1-.3-.2-.5-.2H9.1l.6 1.1z"
                      fill="#b23f33"
                    />
                    <path
                      d="M9.8 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M12.7 6.3c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4c0 .3-.2.4-.4.4"
                      fill="#fff"
                    />
                    <path
                      d="M4.9 6.1L1.5.5C1.4.4 1.4.2 1.4 0L.1 2.1c-.1.3-.1.7 0 .9l3 5c.2.3.6.5.9.5h3.6c.1-.1.3-.2.3-.3l1.2-2.1z"
                      fill="#ecb02a"
                      mask="url(#service-gcp_svg__a)"
                      transform="translate(0 3.421)"
                    />
                    <path
                      d="M7.4 11.9h.2c.1-.1.3-.2.3-.3l1.2-2.1H7.8z"
                      fill="#c79732"
                    />
                    <g
                      fill="#fff"
                    >
                      <path
                        d="M4.1 11.1c-.2 0-.4-.2-.4-.4s.2-.4.4-.4.4.2.4.4-.2.4-.4.4M1.2 6.3C1 6.3.9 6.2.9 6s.2-.4.4-.4.4.2.4.4c-.1.2-.3.3-.5.3"
                      />
                    </g>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                connectors.GCR.name
              </p>
            </div>
            <div
              class="squareCardContainer"
            >
              <div
                class="bp3-card bp3-elevation-0 Card--card artifactIcon"
              >
                <span
                  class="bp3-icon StyledProps--main"
                  data-icon="ecr-step"
                  style="height: 26px;"
                >
                  <svg
                    fill="#fff"
                    fill-rule="evenodd"
                    height="26"
                    stroke="#000"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    viewBox="0 0 85 85"
                    width="26"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <style>
                      .ecr-step_svg__B{stroke:none}.ecr-step_svg__C{fill:#f58536}
                    </style>
                    <use
                      x="2.5"
                      xlink:href="#ecr-step_svg__A"
                      y="2.5"
                    />
                    <symbol
                      id="ecr-step_svg__A"
                      overflow="visible"
                    >
                      <g
                        class="ecr-step_svg__B"
                        fill="#9d5025"
                      >
                        <path
                          d="M0 41.579C0 20.293 17.84 3.157 40 3.157s40 17.136 40 38.422S62.16 80 40 80 0 62.864 0 41.579z"
                        />
                        <path
                          d="M0 38.422h80v3.157H0z"
                        />
                      </g>
                      <path
                        class="ecr-step_svg__B ecr-step_svg__C"
                        d="M0 38.422C0 17.136 17.84 0 40 0s40 17.136 40 38.422-17.84 38.422-40 38.422S0 59.707 0 38.422z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M42.589 34.255h-5.166L34.65 11.364h10.713l-2.774 22.891z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M63.135 51.111l2.064-1.641-7.48-10.732-16.379-5.492L40 41.932l14.762 1.326 8.373 7.853zm-46.27 0l-2.051-1.641 7.466-10.732 16.379-5.492L40 41.932l-14.762 1.326-8.373 7.853zm15.708-39.747c0-3.952 3.312-7.134 7.427-7.134s7.427 3.182 7.427 7.134-3.312 7.134-7.427 7.134-7.427-3.182-7.427-7.134z"
                      />
                      <path
                        class="ecr-step_svg__B ecr-step_svg__C"
                        d="M40 19.129c-4.465 0-8.084-3.477-8.084-7.765S35.535 3.599 40 3.599s8.084 3.476 8.084 7.765c-.007 4.286-3.622 7.758-8.084 7.765zm0-14.268c3.739 0 6.77 2.911 6.77 6.503s-3.031 6.502-6.77 6.502-6.77-2.911-6.77-6.502S36.261 4.862 40 4.862h0zm-2.432 6.503c0-1.294 1.085-2.336 2.432-2.336s2.432 1.042 2.432 2.336S41.347 13.7 40 13.7s-2.432-1.042-2.432-2.336z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M34.65 37.5c0-2.847 2.386-5.139 5.35-5.139s5.35 2.292 5.35 5.139-2.386 5.139-5.35 5.139-5.35-2.292-5.35-5.139z"
                      />
                      <path
                        class="ecr-step_svg__B ecr-step_svg__C"
                        d="M40 43.27c-3.312-.007-5.994-2.588-5.994-5.77s2.682-5.763 5.994-5.77 6.006 2.563 6.02 5.745c.004 1.536-.629 3.01-1.759 4.097S41.599 43.27 40 43.27zm0-10.29c2.592-.007 4.699 2.005 4.706 4.495s-2.088 4.513-4.679 4.52-4.699-2.005-4.706-4.495 2.088-4.513 4.679-4.52zm-1.643 4.52c0-.874.733-1.578 1.643-1.578s1.643.704 1.643 1.578-.733 1.578-1.643 1.578-1.643-.704-1.643-1.578z"
                      />
                      <path
                        class="ecr-step_svg__B"
                        d="M22.741 49.344H57.26v18.321H22.741z"
                      />
                      <g
                        fill="#fbbf93"
                      >
                        <use
                          class="ecr-step_svg__B"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="4.732"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="9.477"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="14.21"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="18.942"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="23.687"
                          xlink:href="#ecr-step_svg__C"
                        />
                        <use
                          class="ecr-step_svg__B"
                          x="28.419"
                          xlink:href="#ecr-step_svg__C"
                        />
                      </g>
                    </symbol>
                    <defs>
                      <path
                        d="M24.476 50.821h2.629v15.366h-2.629z"
                        id="ecr-step_svg__C"
                      />
                    </defs>
                  </svg>
                </span>
              </div>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black100"
                style="font-size: 12px; text-align: center;"
              >
                connectors.ECR.name
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Artifact ConnectorRefSteps tests renders without crashing 1`] = `
<div>
  <div
    class="StepWizard--main existingDocker StepWizard--navBar"
  >
    <div
      class="StepWizard--navBarList"
    >
      <div
        class="StepWizard--navStep StepWizard--activeStep"
      >
        <span
          class="StepWizard--number"
        >
          1
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepoType
        </p>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          <div
            class="subtitle"
            style="display: flex;"
          >
            <span
              class="bp3-icon StyledProps--main"
              data-icon="info"
            >
              <svg
                height="26"
                viewBox="0 0 12 12"
                width="26"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0 6a6 6 0 1012 0A6 6 0 000 6zm.75 0a5.25 5.25 0 1010.5 0A5.25 5.25 0 00.75 6zm4.206 3.104v.646h2.682v-.646l-.836-.144V4.203H4.956v.65l.836.144V8.96l-.836.144zm1.846-7.352v1.03h-1.01v-1.03h1.01z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <span
              style="align-self: center;"
            >
              dockerRegistry
            </span>
          </div>
        </p>
      </div>
      <div
        class="StepWizard--navStep"
      >
        <span
          class="StepWizard--number"
        >
          2
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main StepWizard--stepName"
          style="--text-line-clamp: 2; width: 240px;"
        >
          connectors.artifactRepository
        </p>
      </div>
    </div>
    <div
      class="StepWizard--stepDetails"
    >
       
      <div
        class="StyledProps--font StyledProps--main optionsViewContainer"
      >
        <h2
          class="StyledProps--font StyledProps--font-h2 StyledProps--main StyledProps--margin-bottom-large"
          level="2"
          style="color: black; font-size: 24px;"
        >
          first step
        </h2>
        <div
          class="headerContainer"
        >
          <div
            class="Layout--horizontal Layout--layout-spacing-large StyledProps--main"
          />
        </div>
        <div
          class="Layout--horizontal StyledProps--main"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main saveBtn StyledProps--intent-primary Button--with-current-color"
            type="submit"
          >
            <span
              class="bp3-button-text"
            >
              continue
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-right StyledProps--main"
              icon="chevron-right"
            >
              <svg
                data-icon="chevron-right"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  chevron-right
                </desc>
                <path
                  d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
